--- a/css/styles.css
+++ b/css/styles.css
@@ -107,4 +107,44 @@ body {
     width: 150px;
     margin: 0 5px; }
 
+.gallery-header {
+  width: 1100px; }
+  .gallery-header img {
+    width: 100%; }
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px; }
+
+.album {
+  width: 150px;
+  margin: 0 0px 10px 0px; }
+  .album img {
+    width: 100%; }
+  .album h1 {
+    color: #6699ff;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    font-style: italic; }
+    .album h1 a {
+      color: #6699ff;
+      text-decoration: none; }
+      .album h1 a:hover {
+        color: #99bbff;
+        text-decoration: underline; }
+  .album p {
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+    font-size: 10px; }
+    .album p a {
+      color: #66CC66;
+      text-decoration: none; }
+      .album p a:hover {
+        text-decoration: underline; }
+
 /*# sourceMappingURL=styles.css.map */
