--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -131,3 +131,57 @@ body {
     margin: 0 5px;
   }
 }
+
+
+// | ================ Gallery Page ================ |
+
+.gallery-header {
+  width: 1100px;
+  img {
+    width: 100%;
+  }
+}
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+}
+
+.album {
+  width: 150px;
+  margin: 0 0px 10px 0px;
+  img {
+    width: 100%;
+  }
+  h1 {
+    color: #6699ff;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    font-style: italic;
+    a {
+      color: #6699ff;
+      text-decoration: none;
+      &:hover {
+        color: lighten(#6699ff, 10%);
+        text-decoration: underline;
+      }
+    }
+  }
+  p {
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    a {
+      color: #66CC66;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
